<resources>
    <string name="app_name">Статистика групп вконтакте</string>
    <string name="count_button_name">Подсчитать количество изображений в группе</string>
    <string name="download_multiple_button_name">Скачать все изображения из группы в локальное хранилище</string>
    <string name="download_single_button_name">Скачать выбранное изображение из группы в локальное хранилище</string>
    <string name="repeating_button_name">Получить статистику повторяющихся постоа</string>
    <string name="count_text">count</string>
    <string name="subscription_statistics">Получить статистику подписок за заданное время</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Общие настройки</string>

    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">Дана Майдана</string>

    <string name="pref_title_group_name">Короткое имя группы или её id</string>
    <string name="pref_default_group_name">nitherlands_can_think</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Настройки уведомлений</string>
    <string name="pref_title_new_follower_notifications">Уведомление о новых подписчиках</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Статистика группы</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Статистика
        групп
        вконтакте</string>
    <string name="nav_header_subtitle">github.com/tubus</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_photos_statistcs">PhotosStatistcsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
