<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/launcher_picture" />

    <TextView
        android:id="@+id/nav_header_main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/group2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/group2"
        app:layout_constraintEnd_toEndOf="@+id/group2"
        app:layout_constraintStart_toStartOf="@+id/group2"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_main_name" />

    <android.support.constraint.Group
        android:id="@+id/group2"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:constraint_referenced_ids="nav_header_main_name,textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_header_main_name"
        app:layout_constraintStart_toStartOf="@+id/nav_header_main_name"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
