<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    android:theme="@style/AppTheme"
    tools:context=".ActionChoiceActivity">

    <ScrollView
        android:id="@+id/scroll_layout_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linear_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/count_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonPrimary"
                android:text="@string/count_button_name"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="1dp" />

            <android.support.constraint.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="count_button,countTextView" />

            <TextView
                android:id="@+id/countTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/count_button" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/download_single_input_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="photoNumber" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/download_single_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorButtonPrimary"
                android:text="@string/download_single_button_name"
                app:layout_constraintTop_toBottomOf="@+id/countTextView"
                tools:layout_editor_absoluteX="8dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:visibility="visible"
                tools:srcCompat="@tools:sample/backgrounds/scenic[10]" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="@android:integer/status_bar_notification_info_maxnum"
                android:progress="0"
                android:visibility="visible" />

            <Button
                android:id="@+id/download_multiple_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@color/colorButtonPrimary"
                android:text="@string/download_multiple_button_name" />

            <Button
                android:id="@+id/repeating_button_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonPrimary"
                android:text="@string/repeating_button_name"
                tools:text="@string/repeating_button_name" />

            <TextView
                android:id="@+id/repeating_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Repeating Posts"
                android:textAlignment="center" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/hours_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="amount of hours"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/subscription_statistics_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonPrimary"
                android:text="@string/subscription_statistics" />

            <TextView
                android:id="@+id/subscription_statistics_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_statistics"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>